ci: extract dev config files from tox.ini
Better to only keep tox job definitions in the tox.ini file. Note that
config files are only extracted if their respective tools supports a
config file name that starts with a dot

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,7 +59,7 @@
   "rewrap.wrappingColumn": 79,
   "search.exclude": {
     "**/tests/**/__init__.py": true,
-    "*/tox.ini": true,
+    "*/.pydocstyle": true,
     ".constraints/*.txt": true
   },
   "telemetry.enableCrashReporter": false,
