ci: change auto-upgrade commit message

--- a/.github/workflows/requirements-pr.yml
+++ b/.github/workflows/requirements-pr.yml
@@ -75,7 +75,7 @@ jobs:
           git checkout -b ${GITHUB_HEAD_REF}
           if [[ $(git status -s) ]]; then
             git add -A
-            git commit -m "ci: upgrade developer dependencies (automatic)"
+            git commit -m "ci: upgrade pinned requirements (automatic)"
             git config pull.rebase true
             git pull origin ${GITHUB_HEAD_REF}
             git push origin HEAD:${GITHUB_HEAD_REF}
