--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,13 +26,14 @@ repos:
       - id: trailing-whitespace
 
   - repo: https://github.com/ComPWA/repo-maintenance
-    rev: 0.0.14
+    rev: 0.0.16
     hooks:
       - id: check-dev-files
       - id: fix-first-nbcell
         args:
           - --replace
       - id: fix-nbformat-version
+      - id: format-setup-cfg
 
   - repo: https://github.com/asottile/blacken-docs
     rev: v1.10.0
@@ -65,7 +66,7 @@ repos:
         language_version: 12.18.2 # prettier does not specify node correctly
 
   - repo: https://github.com/ComPWA/mirrors-pyright
-    rev: v1.1.134
+    rev: v1.1.136
     hooks:
       - id: pyright
 
