--- a/.github/workflows/requirements-cron.yml
+++ b/.github/workflows/requirements-cron.yml
@@ -74,7 +74,7 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
-          commit-message: "ci: upgrade pinned requirements (automatic)"
+          commit-message: "ci: upgrade pinned requirements"
           committer: GitHub <noreply@github.com>
           author: GitHub <noreply@github.com>
           title: "ci: upgrade pinned requirements"
