ci: convert requirements upgrade script to Python
fix: remove extras syntax from constraints files

--- a/.github/workflows/requirements-pr.yml
+++ b/.github/workflows/requirements-pr.yml
@@ -48,7 +48,7 @@ jobs:
           pip install pip-tools
       - name: Upgrade dependencies
         if: steps.git-diff.outputs.dependency-changes != ''
-        run: bash .constraints/upgrade.sh
+        run: python3 .constraints/pin_requirements.py
       - uses: actions/upload-artifact@v2
         with:
           path: .constraints/py${{ matrix.python-version }}.txt
