--- a/.github/workflows/requirements-cron.yml
+++ b/.github/workflows/requirements-cron.yml
@@ -29,7 +29,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install pip-tools
       - name: Upgrade pinned requirements
-        run: bash .constraints/upgrade.sh
+        run: python3 .constraints/pin_requirements.py
       - uses: actions/upload-artifact@v2
         with:
           path: .constraints/py${{ matrix.python-version }}.txt
