fix: install types for docutils and pkg_resources

--- a/setup.cfg
+++ b/setup.cfg
@@ -89,6 +89,8 @@ sty =
     %(format)s
     %(lint)s
     pre-commit >= 1.4.0
+    types-docutils
+    types-pkg_resources
 dev =
     %(doc)s
     %(sty)s
