--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,6 +39,12 @@
   "git.rebaseWhenSync": true,
   "githubPullRequests.telemetry.enabled": false,
   "gitlens.advanced.telemetry.enabled": false,
+  "myst.preview.extensions": [
+    "amsmath",
+    "colon_fence",
+    "dollarmath",
+    "tasklist"
+  ],
   "python.analysis.autoImportCompletions": false,
   "python.analysis.diagnosticMode": "workspace",
   "python.formatting.provider": "black",
