--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ skipsdist = True
 
 [testenv:doc]
 description =
-    Build documentation and API through Sphinx
+    Build documentation through Sphinx
 changedir = docs
 allowlist_externals =
     make
@@ -30,15 +30,18 @@ commands =
         --watch src \
         --re-ignore .*/.ipynb_checkpoints/.* \
         --re-ignore .*/__pycache__/.* \
+        --re-ignore .*\.gitignore \
         --re-ignore docs/.*\.csv \
+        --re-ignore docs/.*\.gif \
         --re-ignore docs/.*\.gv \
         --re-ignore docs/.*\.inv \
         --re-ignore docs/.*\.json \
         --re-ignore docs/.*\.pickle \
+        --re-ignore docs/.*\.png \
+        --re-ignore docs/.*\.svg \
         --re-ignore docs/.*\.yaml \
         --re-ignore docs/.*\.yml \
         --re-ignore docs/_build/.* \
-        --re-ignore docs/api/.* \
         --open-browser \
         docs/ docs/_build/html
 
