ci: remove flake8

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,11 +49,7 @@
   "python.analysis.diagnosticMode": "workspace",
   "python.formatting.provider": "black",
   "python.languageServer": "Pylance",
-  "python.linting.banditEnabled": false,
-  "python.linting.enabled": true,
-  "python.linting.flake8Enabled": true,
-  "python.linting.pydocstyleEnabled": true,
-  "python.linting.pylamaEnabled": false,
+  "python.linting.enabled": false,
   "python.testing.nosetestsEnabled": false,
   "python.testing.pytestArgs": ["--color=no", "--no-cov"],
   "python.testing.pytestEnabled": false,
