--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -71,6 +71,12 @@ repos:
     hooks:
       - id: markdownlint
 
+  - repo: https://github.com/nbQA-dev/nbQA
+    rev: 1.1.0
+    hooks:
+      - id: nbqa-black
+      - id: nbqa-isort
+
   - repo: https://github.com/kynan/nbstripout
     rev: 0.5.0
     hooks:
