ci: add pre-commit.ci configuration

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,10 @@
+ci:
+  autoupdate_commit_msg: "ci: autoupdate pre-commit hooks"
+  autoupdate_schedule: monthly
+  skip:
+    # hooks that don't work on pre-commit.ci
+    - editorconfig-checker
+
 repos:
   - repo: meta
     hooks:
