build!: remove src folder (#113)
* ci: autoupdate pre-commit hooks
* ci: remove mypy
* ci: remove pydocstyle
* ci: remove pylint
* ci: remove pyright
* ci: remove flake8
* chore: remove Python package testing
* docs: remove API for pwa_pages
  pwa_pages is not a package anymore and this repository only hosts
  documentation
* build: move install requirements to doc
* build: remove numpy and graphviz

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,31 +6,29 @@ requires = [
 ]
 
 [tool.setuptools_scm]
-write_to = "src/pwa_pages/version.py"
+write_to = "version.py"
 
 [tool.black]
-line-length = 79
-target-version = [
-    'py36',
-    'py37',
-    'py38',
-]
-include = '\.pyi?$'
 exclude = '''
 /(
     .*\.egg-info
     | .*build
     | \.eggs
     | \.git
-    | \.pytest_cache
     | \.tox
     | \.venv
     | \.vscode
     | dist
 )/
 '''
+include = '\.pyi?$'
+line-length = 79
+target-version = [
+    "py36",
+    "py37",
+    "py38",
+]
 
 [tool.isort]
-profile = "black"
-src_paths = ["src", "tests"]
 line_length = 79
+profile = "black"
