--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ skipsdist = True
 
 [testenv:doc]
 description =
-    Build documentation and API through Sphinx
+    Build documentation through Sphinx
 changedir = docs
 allowlist_externals =
     make
@@ -27,18 +27,20 @@ passenv =
 commands =
     sphinx-autobuild \
         --watch docs \
-        --watch src \
         --re-ignore .*/.ipynb_checkpoints/.* \
         --re-ignore .*/__pycache__/.* \
+        --re-ignore .*\.gitignore \
         --re-ignore docs/.*\.csv \
+        --re-ignore docs/.*\.gif \
         --re-ignore docs/.*\.gv \
         --re-ignore docs/.*\.inv \
         --re-ignore docs/.*\.json \
         --re-ignore docs/.*\.pickle \
+        --re-ignore docs/.*\.png \
+        --re-ignore docs/.*\.svg \
         --re-ignore docs/.*\.yaml \
         --re-ignore docs/.*\.yml \
         --re-ignore docs/_build/.* \
-        --re-ignore docs/api/.* \
         --open-browser \
         docs/ docs/_build/html
 
@@ -62,29 +64,10 @@ allowlist_externals =
 commands =
     make ignore-warnings=1 linkcheck # for margin directive
 
-[testenv:pydeps]
-description =
-    Visualize module dependencies
-deps =
-    pydeps
-changedir = src
-commands =
-    pydeps pwa_pages \
-        -o module_structure.svg \
-        --exclude *._* \
-        --max-bacon=1 \
-        --noshow
-passenv = HOME
-
 [testenv:sty]
 description =
     Perform all linting, formatting, and spelling checks
-setenv =
-    SKIP = mypy
 allowlist_externals =
-    mypy
     pre-commit
 commands =
-    # run mypy separately because of potential caching problems
-    mypy docs/conf.py src
     pre-commit run {posargs} -a
