--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,10 +24,6 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "cSpell.enabled": true,
-  "coverage-gutters.coverageFileNames": ["coverage.xml"],
-  "coverage-gutters.coverageReportFileName": "**/htmlcov/index.html",
-  "coverage-gutters.showGutterCoverage": false,
-  "coverage-gutters.showLineCoverage": true,
   "editor.formatOnSave": true,
   "editor.rulers": [80],
   "files.watcherExclude": {
@@ -49,22 +45,12 @@
   "python.analysis.diagnosticMode": "workspace",
   "python.formatting.provider": "black",
   "python.languageServer": "Pylance",
-  "python.linting.banditEnabled": false,
-  "python.linting.enabled": true,
-  "python.linting.flake8Enabled": true,
-  "python.linting.mypyEnabled": true,
-  "python.linting.pydocstyleEnabled": true,
-  "python.linting.pylamaEnabled": false,
-  "python.linting.pylintCategorySeverity.refactor": "Information",
-  "python.linting.pylintEnabled": true,
-  "python.linting.pylintUseMinimalCheckers": false,
+  "python.linting.enabled": false,
   "python.testing.nosetestsEnabled": false,
-  "python.testing.pytestArgs": ["--color=no", "--no-cov"],
   "python.testing.pytestEnabled": false,
   "python.testing.unittestEnabled": false,
   "rewrap.wrappingColumn": 79,
   "search.exclude": {
-    "**/tests/**/__init__.py": true,
     "*/.pydocstyle": true,
     ".constraints/*.txt": true
   },
