--- a/.github/workflows/ci-style.yml
+++ b/.github/workflows/ci-style.yml
@@ -1,4 +1,4 @@
-name: CI-style
+name: pre-commit
 
 on:
   push:
@@ -23,6 +23,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -c .constraints/py3.7.txt -e .[sty]
-      - name: Perform style checks
-        run: pre-commit run -a --color always
+          pip install -c .constraints/py3.7.txt pre-commit
+      - name: Run pre-commit hooks that don't work on pre-commit.ci
+        # cspell:ignore editorconfig
+        run: |
+          pre-commit run editorconfig-checker -a --color always
