ci!: switch to pre-commit.ci where possible (#115)
* ci: use repos for black and isort hooks
  See considerations under
  https://github.com/ComPWA/qrules/pull/87
* ci: remove language_version from prettier
* ci: add nbqa as pre-commit hook
* ci: add pre-commit.ci configuration
* ci: remove pre-commit hooks from CI

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,10 @@
+ci:
+  autoupdate_commit_msg: "ci: autoupdate pre-commit hooks"
+  autoupdate_schedule: monthly
+  skip:
+    # hooks that don't work on pre-commit.ci
+    - editorconfig-checker
+
 repos:
   - repo: meta
     hooks:
@@ -37,6 +44,11 @@ repos:
       - id: fix-nbformat-version
       - id: format-setup-cfg
 
+  - repo: https://github.com/psf/black
+    rev: 21.7b0
+    hooks:
+      - id: black
+
   - repo: https://github.com/asottile/blacken-docs
     rev: v1.11.0
     hooks:
@@ -56,10 +68,21 @@ repos:
             .*\.py
           )$
 
+  - repo: https://github.com/pycqa/isort
+    rev: 5.9.3
+    hooks:
+      - id: isort
+
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.28.1
     hooks:
       - id: markdownlint
+
+  - repo: https://github.com/nbQA-dev/nbQA
+    rev: 1.1.0
+    hooks:
+      - id: nbqa-black
+      - id: nbqa-isort
 
   - repo: https://github.com/kynan/nbstripout
     rev: 0.5.0
@@ -71,22 +94,3 @@ repos:
     hooks:
       - id: prettier
         language_version: 12.18.2 # prettier does not specify node correctly
-
-  # The following tools have to be install locally, because they can also be
-  # used by code editors (e.g. linting and format-on-save).
-
-  - repo: local
-    hooks:
-      - id: black
-        name: black
-        entry: black
-        language: system
-        types:
-          - python
-
-      - id: isort
-        name: isort
-        entry: isort
-        language: system
-        types:
-          - python
