docs: add package description

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,7 @@ name = PWA-pages
 author = Common Partial Wave Analysis
 author_email = compwa-admin@ep1.rub.de
 maintainer_email = compwa-admin@ep1.rub.de
+description = A central knowledge-base for Partial Wave Analysis
 long_description = file: README.md
 long_description_content_type = text/markdown
 project_urls =
