--- a/setup.cfg
+++ b/setup.cfg
@@ -50,6 +50,7 @@ doc =
     jupyter
     matplotlib
     myst-nb >= 0.11  # myst_enable_extensions
+    pytablewriter[html]
     Sphinx >= 3
     sphinx-book-theme
     sphinx-copybutton
