--- a/setup.cfg
+++ b/setup.cfg
@@ -39,7 +39,7 @@ classifiers =
     Typing :: Typed
 
 [options]
-python_requires = >=3.6, <3.10
+python_requires = >=3.6
 setup_requires =
     setuptools_scm
 
