build: support Python 3.10 (#131)
* ci: autoupdate constraint files

Co-authored-by: GitHub <noreply@github.com>
Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,32 +33,33 @@ classifiers =
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
     Topic :: Scientific/Engineering
     Topic :: Scientific/Engineering :: Physics
     Typing :: Typed
 
 [options]
-python_requires = >=3.6, <3.10
+python_requires = >=3.6
 setup_requires =
     setuptools_scm
 
 [options.extras_require]
 doc =
-    dataclasses; python_version < '3.7'
+    dataclasses; python_version <'3.7'
     feynman
     ipywidgets
     jupyter
     matplotlib
-    myst-nb >= 0.11  # myst_enable_extensions
+    myst-nb >=0.11  # myst_enable_extensions
     pytablewriter[html]
-    Sphinx >= 3
+    Sphinx >=3
     sphinx-book-theme
     sphinx-copybutton
     sphinx-math-dollar
     sphinx-panels
     sphinx-thebe
     sphinx-togglebutton
-    sphinxcontrib-bibtex >= 2.2  # bibtex_reference_style
+    sphinxcontrib-bibtex >=2.2  # bibtex_reference_style
     sphinxcontrib-hep-pdgref
     sympy
 format =
@@ -66,12 +67,12 @@ format =
     isort
 sty =
     %(format)s
-    pre-commit >= 1.4.0
+    pre-commit >=1.4.0
 dev =
     %(doc)s
     %(sty)s
     jupyterlab
     jupyterlab-code-formatter
-    pip-tools >= 6.1.0  # for extras_require
+    pip-tools >=6.1.0  # for extras_require
     sphinx-autobuild
-    tox >= 1.9  # for skip_install, use_develop
+    tox >=1.9  # for skip_install, use_develop
