--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,7 +33,7 @@ repos:
       - id: trailing-whitespace
 
   - repo: https://github.com/ComPWA/repo-maintenance
-    rev: 0.0.56
+    rev: 0.0.69
     hooks:
       - id: check-dev-files
         args:
@@ -69,7 +69,7 @@ repos:
           )$
 
   - repo: https://github.com/pycqa/isort
-    rev: 5.9.3
+    rev: 5.10.0
     hooks:
       - id: isort
 
@@ -89,8 +89,28 @@ repos:
     hooks:
       - id: nbstripout
 
+        args:
+          - --extra-keys
+          - |
+            cell.metadata.code_folding
+            metadata.celltoolbar
+            metadata.interpreter
+            metadata.language_info
+            metadata.notify_time
+            metadata.toc
+            metadata.varInspector
+            metadata.toc-autonumbering
+            metadata.toc-showcode
+            metadata.toc-showmarkdowntxt
+            metadata.toc-showtags
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v2.4.1
     hooks:
       - id: prettier
         language_version: 12.18.2 # prettier does not specify node correctly
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v2.29.0
+    hooks:
+      - id: pyupgrade
+        args:
+          - --py36-plus
