ci: add linting for Python source code
* chore: apply pyupgrade
* chore: fix linting issues flake8, mypy, pylint, pyright

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -22,11 +22,12 @@ vscode:
     - executablebookproject.myst-highlight
     - github.vscode-pull-request-github
     - ms-python.python
+    - ms-python.vscode-pylance
     - ms-vsliveshare.vsliveshare
     - redhat.vscode-yaml
+    - ryanluker.vscode-coverage-gutters
     - stkb.rewrap
     - streetsidesoftware.code-spell-checker
     - travisillig.vscode-json-stable-stringify
-    - trentrand.git-commit-helper-vscode
     - tyriar.sort-lines
     - yzhang.markdown-all-in-one
