--- a/setup.cfg
+++ b/setup.cfg
@@ -65,8 +65,31 @@ doc =
 format =
     black
     isort
+flake8 =
+    flake8 >=4  # extend-select
+    flake8-blind-except
+    flake8-bugbear
+    flake8-builtins
+    flake8-comprehensions
+    flake8-pytest-style
+    flake8-rst-docstrings
+    flake8-type-ignore; python_version >="3.8.0"
+    flake8-use-fstring
+    pep8-naming
+mypy =
+    mypy >=0.730  # error code support
+    types-docutils
+    types-pkg-resources
+    types-python-dateutil
+    types-setuptools
+lint =
+    %(flake8)s
+    %(mypy)s
+    pydocstyle
+    pylint >=2.5  # good-names-rgxs
 sty =
     %(format)s
+    %(lint)s
     pre-commit >=1.4.0
 dev =
     %(doc)s
