--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,8 @@ description =
 changedir = docs
 allowlist_externals =
     make
+passenv =
+    READTHEDOCS_VERSION
 commands =
     make html
 
@@ -23,6 +25,7 @@ allowlist_externals =
     sphinx-autobuild
 passenv =
     EXECUTE_NB
+    READTHEDOCS_VERSION
     TERM
 commands =
     sphinx-autobuild \
@@ -47,6 +50,8 @@ commands =
 [testenv:docnb]
 description =
     Build documentation through Sphinx WITH output of Jupyter notebooks
+passenv =
+    READTHEDOCS_VERSION
 setenv =
     EXECUTE_NB = "yes"
 changedir = docs
@@ -67,7 +72,11 @@ commands =
 [testenv:sty]
 description =
     Perform all linting, formatting, and spelling checks
+setenv =
+    SKIP = mypy, pyright
 allowlist_externals =
+    mypy
     pre-commit
 commands =
+    mypy docs # run separately because of potential caching problems
     pre-commit run {posargs} -a
