--- a/.github/workflows/ci-style.yml
+++ b/.github/workflows/ci-style.yml
@@ -23,8 +23,13 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -c .constraints/py3.7.txt pre-commit
+          pip install -c .constraints/py3.7.txt -e .[sty]
+      - name: Run non-local pre-commit hooks
+        run: |
+          pre-commit run flake8 -a --color always
+          pre-commit run mypy -a --color always
+          pre-commit run pylint -a --color always
       - name: Run pre-commit hooks that don't work on pre-commit.ci
-        # cspell:ignore editorconfig
         run: |
           pre-commit run editorconfig-checker -a --color always
+          pre-commit run pyright -a --color always
