feat: get repo information from GitHub

--- a/pytest.ini
+++ b/pytest.ini
@@ -11,6 +11,7 @@ addopts =
     --ignore=docs/conf.py
 filterwarnings =
     error
+    ignore:Exception ignored in.*:UserWarning
 testpaths =
     src
     tests
