--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -32,6 +32,8 @@ jobs:
           pip install -c .constraints/py${{ matrix.python-version }}.txt -e .[test]
       - name: Run unit tests and doctests with pytest
         run: pytest -n auto --cov=pwa_pages --cov-report=xml
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - if: matrix.python-version == '3.7'
         uses: codecov/codecov-action@v1
         with:
