chore: create docs-src-tests structure

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,6 +35,9 @@ repos:
             \.cspell\.json
           )$
       - id: mixed-line-ending
+      - id: name-tests-test
+        name: Tests should start with test_
+        args: ["--django"]
       - id: trailing-whitespace
 
   - repo: https://github.com/ComPWA/repo-maintenance
