--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,12 @@ classifiers =
 python_requires = >=3.6
 setup_requires =
     setuptools_scm
+install_requires =
+    PyGithub
+    python-dateutil
+packages = find:
+package_dir =
+    =src
 
 [options.extras_require]
 doc =
@@ -62,6 +68,10 @@ doc =
     sphinxcontrib-bibtex >=2.2  # bibtex_reference_style
     sphinxcontrib-hep-pdgref
     sympy
+test =
+    pytest
+    pytest-cov
+    pytest-xdist
 format =
     black
     isort
@@ -90,12 +100,21 @@ lint =
 sty =
     %(format)s
     %(lint)s
+    %(test)s  # for pytest type hints
     pre-commit >=1.4.0
 dev =
     %(doc)s
     %(sty)s
+    %(test)s
     jupyterlab
     jupyterlab-code-formatter
     pip-tools >=6.1.0  # for extras_require
     sphinx-autobuild
     tox >=1.9  # for skip_install, use_develop
+
+[options.packages.find]
+where = src
+
+[options.package_data]
+pwa_pages =
+    py.typed
