--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,11 @@ version.py
 # Temporary files
 *.pyc
 *condaenv.*
+.coverage
+.coverage.*
 .ipynb_checkpoints/
 .mypy*/
+.pytest_cache/
 __pycache__/
 htmlcov/
 prof/
