--- a/.mypy.ini
+++ b/.mypy.ini
@@ -6,6 +6,11 @@ warn_unused_configs = True
 files =
     **/*.py
 
+[mypy-tests.*]
+check_untyped_defs = True
+disallow_incomplete_defs = False
+disallow_untyped_defs = False
+
 ; External packages that miss stubs or type hints
 [mypy-pybtex.*]
 ignore_missing_imports = True
