--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,10 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "cSpell.enabled": true,
+  "coverage-gutters.coverageFileNames": ["coverage.xml"],
+  "coverage-gutters.coverageReportFileName": "**/htmlcov/index.html",
+  "coverage-gutters.showGutterCoverage": false,
+  "coverage-gutters.showLineCoverage": true,
   "editor.formatOnSave": true,
   "editor.rulers": [80],
   "files.watcherExclude": {
@@ -53,9 +57,12 @@
   "python.linting.pylamaEnabled": false,
   "python.linting.pylintCategorySeverity.refactor": "Information",
   "python.linting.pylintEnabled": true,
-  "python.testing.pytestEnabled": false,
+  "python.testing.pytestArgs": ["--color=no", "--no-cov", "-vv"],
+  "python.testing.pytestEnabled": true,
+  "python.testing.unittestEnabled": false,
   "rewrap.wrappingColumn": 79,
   "search.exclude": {
+    "**/tests/**/__init__.py": true,
     "*/.pydocstyle": true,
     ".constraints/*.txt": true
   },
