--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,20 @@
 [tox]
 envlist =
+    py,
     doc,
     sty,
 passenv = PYTHONPATH
 skip_install = True
 skip_missing_interpreters = True
 skipsdist = True
+
+[testenv]
+description =
+    Compute the test coverage of all unit tests
+allowlist_externals =
+    pytest
+commands =
+    pytest {posargs}
 
 [testenv:doc]
 description =
@@ -78,5 +87,5 @@ allowlist_externals =
     mypy
     pre-commit
 commands =
-    mypy docs # run separately because of potential caching problems
+    mypy docs src tests # run separately because of potential caching problems
     pre-commit run {posargs} -a
