--- a/setup.cfg
+++ b/setup.cfg
@@ -43,7 +43,9 @@ python_requires = >=3.6
 setup_requires =
     setuptools_scm
 install_requires =
+    pydantic
     PyGithub
+    pytablewriter[html]
     python-dateutil
 packages = find:
 package_dir =
@@ -57,7 +59,6 @@ doc =
     jupyter
     matplotlib
     myst-nb >=0.11  # myst_enable_extensions
-    pytablewriter[html]
     Sphinx >=3
     sphinx-book-theme
     sphinx-copybutton
@@ -91,6 +92,7 @@ mypy =
     types-docutils
     types-pkg-resources
     types-python-dateutil
+    types-PyYAML
     types-setuptools
 lint =
     %(flake8)s
