--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,8 @@ description =
     Run all unit tests
 allowlist_externals =
     pytest
+passenv =
+    GITHUB_TOKEN
 commands =
     pytest {posargs}
 
@@ -21,6 +23,8 @@ description =
     Compute test coverage
 allowlist_externals =
     pytest
+passenv =
+    GITHUB_TOKEN
 commands =
     pytest {posargs:tests} \
         --cov-fail-under=90 \
@@ -35,6 +39,7 @@ changedir = docs
 allowlist_externals =
     make
 passenv =
+    GITHUB_TOKEN
     READTHEDOCS_VERSION
 commands =
     make html
@@ -46,6 +51,7 @@ allowlist_externals =
     sphinx-autobuild
 passenv =
     EXECUTE_NB
+    GITHUB_TOKEN
     READTHEDOCS_VERSION
     TERM
 commands =
@@ -72,6 +78,7 @@ commands =
 description =
     Build documentation through Sphinx WITH output of Jupyter notebooks
 passenv =
+    GITHUB_TOKEN
     READTHEDOCS_VERSION
 setenv =
     EXECUTE_NB = "yes"
