--- a/docs/software/framework-inventory.yml
+++ b/docs/software/framework-inventory.yml
@@ -14,11 +14,11 @@ projects:
     url: https://compwa-org.readthedocs.io/en/stable/about.html
     sub_projects:
       - name: QRules
-        url: https://qrules.readthedocs.io
+        url: https://github.com/ComPWA/qrules
       - name: AmpForm
-        url: https://ampform.readthedocs.io
+        url: https://github.com/ComPWA/ampform
       - name: TensorWaves
-        url: https://tensorwaves.readthedocs.io
+        url: https://github.com/ComPWA/tensorwaves
     languages:
       - Python
 
