--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,7 @@ install_requires =
     PyGithub
     pytablewriter[html]
     python-dateutil
+    python-gitlab
     PyYAML
 packages = find:
 package_dir =
