--- a/setup.cfg
+++ b/setup.cfg
@@ -115,6 +115,10 @@ dev =
     sphinx-autobuild
     tox >=1.9  # for skip_install, use_develop
 
+[options.entry_points]
+console_scripts =
+    export-json-schema = pwa_pages.project_inventory:export_json_schema
+
 [options.packages.find]
 where = src
 
