--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,7 @@ ci:
     - flake8
     - mypy
     - pylint
+    - update-json-schema
     # hooks that don't work on pre-commit.ci
     - editorconfig-checker
     - pyright
@@ -145,6 +146,25 @@ repos:
       - id: pyupgrade
         args:
           - --py36-plus
+
+  - repo: local
+    hooks:
+      - id: update-json-schema
+        name: Update JSON validation schema for projects
+        entry: export-json-schema
+        language: system
+        pass_filenames: false
+        files: (docs/software/.*\.json|src/pwa_pages/project_inventory.py)
+
+  - repo: https://github.com/sirosen/check-jsonschema
+    rev: 0.6.0
+    hooks:
+      - id: check-jsonschema
+        name: Check project inventory YAML files
+        language: python
+        files: docs/software/.*\.yml
+        types: [yaml]
+        args: ["--schemafile", "./docs/software/project-inventory-schema.json"]
 
   # The following tools have to be install locally, because they can also be
   # used by code editors (e.g. linting and format-on-save).
