--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,5 +73,8 @@
     ".constraints/*.txt": true
   },
   "telemetry.enableCrashReporter": false,
-  "telemetry.enableTelemetry": false
+  "telemetry.enableTelemetry": false,
+  "yaml.schemas": {
+    "./docs/software/project-inventory-schema.json": ["docs/software/*.yml"]
+  }
 }
