--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,7 +33,7 @@ repos:
       - id: trailing-whitespace
 
   - repo: https://github.com/ComPWA/repo-maintenance
-    rev: 0.0.69
+    rev: 0.0.71
     hooks:
       - id: check-dev-files
         args:
@@ -69,7 +69,7 @@ repos:
           )$
 
   - repo: https://github.com/pycqa/isort
-    rev: 5.10.0
+    rev: 5.10.1
     hooks:
       - id: isort
 
@@ -83,12 +83,14 @@ repos:
     hooks:
       - id: nbqa-black
       - id: nbqa-isort
+      - id: nbqa-pyupgrade
+        args:
+          - --py36-plus
 
   - repo: https://github.com/kynan/nbstripout
     rev: 0.5.0
     hooks:
       - id: nbstripout
-
         args:
           - --extra-keys
           - |
@@ -103,11 +105,12 @@ repos:
             metadata.toc-showcode
             metadata.toc-showmarkdowntxt
             metadata.toc-showtags
+
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v2.4.1
     hooks:
       - id: prettier
-        language_version: 12.18.2 # prettier does not specify node correctly
+
   - repo: https://github.com/asottile/pyupgrade
     rev: v2.29.0
     hooks:
