fix: ignore mypy import errors

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -9,3 +9,7 @@ files =
 ; External packages that miss stubs or type hints
 [mypy-pybtex.*]
 ignore_missing_imports = True
+[mypy-sphinx.*]
+ignore_missing_imports = True
+[mypy-sphinxcontrib.bibtex.*]
+ignore_missing_imports = True
