--- a/.github/workflows/ci-style.yml
+++ b/.github/workflows/ci-style.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -c .constraints/py3.7.txt -e .[sty]
+          pip install -c .constraints/py3.7.txt -e .[doc,sty]
       - name: Run non-local pre-commit hooks
         run: |
           pre-commit run flake8 -a --color always
