ci: lint Python source code (#135)
* ci: add linting for Python source code
* ci: remove codestream from recommended extensions
* ci: upgrade pinned requirements (automatic)
* chore: fix linting issues flake8, mypy, pylint, pyright

Co-authored-by: GitHub Action <41898282+github-actions[bot]@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,3 +34,26 @@ target-version = [
 [tool.isort]
 line_length = 79
 profile = "black"
+
+[tool.nbqa.addopts]
+flake8 = [
+    "--extend-ignore=E402,F821",
+]
+
+[tool.pyright]
+exclude = [
+    ".git",
+    ".tox",
+    "docs/_build",
+]
+include = [
+    "docs",
+    "src",
+]
+reportGeneralTypeIssues = false
+reportPrivateImportUsage = false
+reportUnboundVariable = false
+reportUnusedClass = true
+reportUnusedFunction = true
+reportUnusedImport = true
+reportUnusedVariable = true
