--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,11 +41,19 @@
     "dollarmath",
     "tasklist"
   ],
+  "python.analysis.autoImportCompletions": false,
+  "python.analysis.diagnosticMode": "workspace",
   "python.formatting.provider": "black",
-  "python.linting.enabled": false,
-  "python.testing.nosetestsEnabled": false,
+  "python.languageServer": "Pylance",
+  "python.linting.banditEnabled": false,
+  "python.linting.enabled": true,
+  "python.linting.flake8Enabled": true,
+  "python.linting.mypyEnabled": true,
+  "python.linting.pydocstyleEnabled": true,
+  "python.linting.pylamaEnabled": false,
+  "python.linting.pylintCategorySeverity.refactor": "Information",
+  "python.linting.pylintEnabled": true,
   "python.testing.pytestEnabled": false,
-  "python.testing.unittestEnabled": false,
   "rewrap.wrappingColumn": 79,
   "search.exclude": {
     "*/.pydocstyle": true,
