ci: remove cov arguments from pytest.ini

--- a/tox.ini
+++ b/tox.ini
@@ -10,11 +10,23 @@ skipsdist = True
 
 [testenv]
 description =
-    Compute the test coverage of all unit tests
+    Run all unit tests
 allowlist_externals =
     pytest
 commands =
     pytest {posargs}
+
+[testenv:cov]
+description =
+    Compute test coverage
+allowlist_externals =
+    pytest
+commands =
+    pytest {posargs:tests} \
+        --cov-fail-under=90 \
+        --cov-report=html \
+        --cov-report=xml \
+        --cov=pwa_pages
 
 [testenv:doc]
 description =
