--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -31,7 +31,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -c .constraints/py${{ matrix.python-version }}.txt -e .[test]
       - name: Run unit tests and doctests with pytest
-        run: pytest -n auto
+        run: pytest -n auto --cov=pwa_pages --cov-report=xml
       - if: matrix.python-version == '3.7'
         uses: codecov/codecov-action@v1
         with:
