--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,7 +57,13 @@
   "python.linting.pylamaEnabled": false,
   "python.linting.pylintCategorySeverity.refactor": "Information",
   "python.linting.pylintEnabled": true,
-  "python.testing.pytestArgs": ["--color=no", "--no-cov", "-vv"],
+  "python.testing.autoTestDiscoverOnSaveEnabled": false,
+  "python.testing.pytestArgs": [
+    "--color=no",
+    "--cov-report=xml",
+    "--cov=pwa_pages",
+    "-vv"
+  ],
   "python.testing.pytestEnabled": true,
   "python.testing.unittestEnabled": false,
   "rewrap.wrappingColumn": 79,
