chore: move table writing to src folder (#137)
* chore: create docs-src-tests structure
* chore: move table writing source code to src
* ci: add codecov config
* ci: upgrade pinned requirements (automatic)

Co-authored-by: GitHub Action <41898282+github-actions[bot]@users.noreply.github.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,15 @@ classifiers =
 python_requires = >=3.6
 setup_requires =
     setuptools_scm
+install_requires =
+    pydantic
+    PyGithub
+    pytablewriter[html]
+    python-dateutil
+    PyYAML
+packages = find:
+package_dir =
+    =src
 
 [options.extras_require]
 doc =
@@ -51,7 +60,6 @@ doc =
     jupyter
     matplotlib
     myst-nb >=0.11  # myst_enable_extensions
-    pytablewriter[html]
     Sphinx >=3
     sphinx-book-theme
     sphinx-copybutton
@@ -62,6 +70,10 @@ doc =
     sphinxcontrib-bibtex >=2.2  # bibtex_reference_style
     sphinxcontrib-hep-pdgref
     sympy
+test =
+    pytest
+    pytest-cov
+    pytest-xdist
 format =
     black
     isort
@@ -81,6 +93,7 @@ mypy =
     types-docutils
     types-pkg-resources
     types-python-dateutil
+    types-PyYAML
     types-setuptools
 lint =
     %(flake8)s
@@ -90,12 +103,21 @@ lint =
 sty =
     %(format)s
     %(lint)s
+    %(test)s  # for pytest type hints
     pre-commit >=1.4.0
 dev =
     %(doc)s
     %(sty)s
+    %(test)s
     jupyterlab
     jupyterlab-code-formatter
     pip-tools >=6.1.0  # for extras_require
     sphinx-autobuild
     tox >=1.9  # for skip_install, use_develop
+
+[options.packages.find]
+where = src
+
+[options.package_data]
+pwa_pages =
+    py.typed
