--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,32 @@
 [tox]
 envlist =
+    py,
     doc,
     sty,
 passenv = PYTHONPATH
 skip_install = True
 skip_missing_interpreters = True
 skipsdist = True
+
+[testenv]
+description =
+    Run all unit tests
+allowlist_externals =
+    pytest
+commands =
+    pytest {posargs}
+
+[testenv:cov]
+description =
+    Compute test coverage
+allowlist_externals =
+    pytest
+commands =
+    pytest {posargs:tests} \
+        --cov-fail-under=90 \
+        --cov-report=html \
+        --cov-report=xml \
+        --cov=pwa_pages
 
 [testenv:doc]
 description =
@@ -78,5 +99,5 @@ allowlist_externals =
     mypy
     pre-commit
 commands =
-    mypy docs # run separately because of potential caching problems
+    mypy docs src tests # run separately because of potential caching problems
     pre-commit run {posargs} -a
