--- a/setup.cfg
+++ b/setup.cfg
@@ -43,10 +43,12 @@ python_requires = >=3.6
 setup_requires =
     setuptools_scm
 install_requires =
+    attrs >=17.3.0  # auto_attribs
     pydantic
     PyGithub
     pytablewriter[html]
     python-dateutil
+    python-gitlab
     PyYAML
 packages = find:
 package_dir =
