--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,7 +42,7 @@ repos:
       - id: trailing-whitespace
 
   - repo: https://github.com/ComPWA/repo-maintenance
-    rev: 0.0.86
+    rev: 0.0.88
     hooks:
       - id: check-dev-files
         args:
@@ -97,7 +97,7 @@ repos:
       - id: markdownlint
 
   - repo: https://github.com/nbQA-dev/nbQA
-    rev: 1.2.1
+    rev: 1.2.2
     hooks:
       - id: nbqa-black
       - id: nbqa-flake8
@@ -125,7 +125,7 @@ repos:
             metadata.toc-showtags
 
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v2.4.1
+    rev: v2.5.0
     hooks:
       - id: prettier
 
@@ -135,7 +135,7 @@ repos:
       - id: pydocstyle
 
   - repo: https://github.com/ComPWA/mirrors-pyright
-    rev: v1.1.188
+    rev: v1.1.190
     hooks:
       - id: pyright
 
@@ -156,7 +156,7 @@ repos:
         files: (docs/software/.*\.json|src/pwa_pages/project_inventory.py)
 
   - repo: https://github.com/sirosen/check-jsonschema
-    rev: 0.6.0
+    rev: 0.7.1
     hooks:
       - id: check-jsonschema
         name: Check project inventory YAML files
@@ -181,6 +181,7 @@ repos:
         name: mypy
         entry: mypy
         language: system
+        require_serial: true
         types:
           - python
 
