docs: list MC HAMMER under project inventory

--- a/docs/software/amplitude-analysis-projects.yml
+++ b/docs/software/amplitude-analysis-projects.yml
@@ -33,6 +33,9 @@ projects:
     languages:
       - C++
 
+  - name: HAMMER
+    url: https://gitlab.com/mpapucci/Hammer
+
   - name: Ipanema
     url: https://gitlab.cern.ch/bsm-fleet/Ipanema
 
