--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,7 +18,7 @@ repos:
       - id: check-useless-excludes
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.0.1
+    rev: v4.1.0
     hooks:
       - id: check-ast
       - id: check-case-conflict
@@ -42,7 +42,7 @@ repos:
       - id: trailing-whitespace
 
   - repo: https://github.com/ComPWA/repo-maintenance
-    rev: 0.0.96
+    rev: 0.0.97
     hooks:
       - id: check-dev-files
         args:
@@ -64,7 +64,7 @@ repos:
       - id: blacken-docs
 
   - repo: https://github.com/streetsidesoftware/cspell-cli
-    rev: v5.6.11
+    rev: v5.6.12
     hooks:
       - id: cspell
 
@@ -119,6 +119,11 @@ repos:
             metadata.colab.name
             metadata.colab.provenance
             metadata.interpreter
+            metadata.language_info.codemirror_mode
+            metadata.language_info.file_extension
+            metadata.language_info.mimetype
+            metadata.language_info.nbconvert_exporter
+            metadata.language_info.pygments_lexer
             metadata.notify_time
             metadata.toc
             metadata.toc-autonumbering
@@ -126,7 +131,6 @@ repos:
             metadata.toc-showmarkdowntxt
             metadata.toc-showtags
             metadata.varInspector
-
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v2.5.1
     hooks:
@@ -138,12 +142,12 @@ repos:
       - id: pydocstyle
 
   - repo: https://github.com/ComPWA/mirrors-pyright
-    rev: v1.1.195
+    rev: v1.1.202
     hooks:
       - id: pyright
 
   - repo: https://github.com/asottile/pyupgrade
-    rev: v2.29.1
+    rev: v2.31.0
     hooks:
       - id: pyupgrade
         args:
@@ -159,7 +163,7 @@ repos:
         files: (docs/software/.*\.json|src/pwa_pages/project_inventory.py)
 
   - repo: https://github.com/sirosen/check-jsonschema
-    rev: 0.8.2
+    rev: 0.9.1
     hooks:
       - id: check-jsonschema
         name: Check project inventory YAML files
