--- a/setup.cfg
+++ b/setup.cfg
@@ -113,6 +113,7 @@ dev =
     %(test)s
     jupyterlab
     jupyterlab-code-formatter
+    jupyterlab-myst
     pip-tools >=6.1.0  # for extras_require
     sphinx-autobuild
     tox >=1.9  # for skip_install, use_develop
