--- a/setup.cfg
+++ b/setup.cfg
@@ -64,6 +64,7 @@ doc =
     myst-nb >=0.11  # myst_enable_extensions
     Sphinx >=3
     sphinx-book-theme
+    sphinx-codeautolink[ipython]
     sphinx-copybutton
     sphinx-math-dollar
     sphinx-panels
