--- a/setup.cfg
+++ b/setup.cfg
@@ -114,7 +114,7 @@ dev =
     %(test)s
     jupyterlab
     jupyterlab-code-formatter
-    jupyterlab-myst
+    jupyterlab-myst; python_version >="3.7.0"
     pip-tools >=6.1.0  # for extras_require
     sphinx-autobuild
     tox >=1.9  # for skip_install, use_develop
