--- a/setup.cfg
+++ b/setup.cfg
@@ -63,6 +63,7 @@ doc =
     matplotlib
     myst-nb >=0.11  # myst_enable_extensions
     Sphinx >=3
+    Sphinx <4.4; python_version <"3.8.0"  # https://github.com/ComPWA/PWA-pages/runs/4998874049
     sphinx-book-theme
     sphinx-codeautolink[ipython]
     sphinx-copybutton
