--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,19 +42,16 @@ repos:
       - id: trailing-whitespace
 
   - repo: https://github.com/ComPWA/repo-maintenance
-    rev: 0.0.97
+    rev: 0.0.103
     hooks:
       - id: check-dev-files
         args:
           - --pin-requirements
-      - id: fix-first-nbcell
-        args:
-          - --replace
       - id: fix-nbformat-version
       - id: format-setup-cfg
 
   - repo: https://github.com/psf/black
-    rev: 21.12b0
+    rev: 22.1.0
     hooks:
       - id: black
 
@@ -64,7 +61,7 @@ repos:
       - id: blacken-docs
 
   - repo: https://github.com/streetsidesoftware/cspell-cli
-    rev: v5.6.12
+    rev: v5.8.1
     hooks:
       - id: cspell
 
@@ -92,14 +89,16 @@ repos:
       - id: isort
 
   - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: v0.30.0
+    rev: v0.31.0
     hooks:
       - id: markdownlint
 
   - repo: https://github.com/nbQA-dev/nbQA
-    rev: 1.2.2
+    rev: 1.2.3
     hooks:
       - id: nbqa-black
+        additional_dependencies:
+          - black>=22.1.0
       - id: nbqa-flake8
       - id: nbqa-isort
       - id: nbqa-pyupgrade
@@ -142,7 +141,7 @@ repos:
       - id: pydocstyle
 
   - repo: https://github.com/ComPWA/mirrors-pyright
-    rev: v1.1.203
+    rev: v1.1.218
     hooks:
       - id: pyright
 
@@ -163,7 +162,7 @@ repos:
         files: (docs/software/.*\.json|src/pwa_pages/project_inventory.py)
 
   - repo: https://github.com/sirosen/check-jsonschema
-    rev: 0.9.1
+    rev: 0.10.2
     hooks:
       - id: check-jsonschema
         name: Check project inventory YAML files
