--- a/setup.cfg
+++ b/setup.cfg
@@ -63,10 +63,11 @@ doc =
     matplotlib
     myst-nb >=0.11  # myst_enable_extensions
     Sphinx >=3
+    Sphinx <4.4; python_version <"3.8.0"  # https://github.com/ComPWA/PWA-pages/runs/4998874049
     sphinx-book-theme
+    sphinx-codeautolink[ipython]
     sphinx-comments
     sphinx-copybutton
-    sphinx-math-dollar
     sphinx-panels
     sphinx-thebe
     sphinx-togglebutton
@@ -114,6 +115,7 @@ dev =
     %(test)s
     jupyterlab
     jupyterlab-code-formatter
+    jupyterlab-myst; python_version >="3.7.0"
     pip-tools >=6.1.0  # for extras_require
     sphinx-autobuild
     tox >=1.9  # for skip_install, use_develop
