--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,8 +37,6 @@
     "**/.tox/**": true
   },
   "git.rebaseWhenSync": true,
-  "githubPullRequests.telemetry.enabled": false,
-  "gitlens.advanced.telemetry.enabled": false,
   "myst.preview.extensions": [
     "amsmath",
     "colon_fence",
@@ -48,7 +46,6 @@
   "python.analysis.autoImportCompletions": false,
   "python.analysis.diagnosticMode": "workspace",
   "python.formatting.provider": "black",
-  "python.languageServer": "Pylance",
   "python.linting.banditEnabled": false,
   "python.linting.enabled": true,
   "python.linting.flake8Enabled": true,
@@ -72,8 +69,7 @@
     "*/.pydocstyle": true,
     ".constraints/*.txt": true
   },
-  "telemetry.enableCrashReporter": false,
-  "telemetry.enableTelemetry": false,
+  "telemetry.telemetryLevel": "off",
   "yaml.schemas": {
     "./docs/software/project-inventory-schema.json": ["docs/software/*.yml"]
   }
