--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -46,7 +46,7 @@ repos:
     hooks:
       - id: check-dev-files
         args:
-          - --pin-requirements
+          - --pin-requirements=bimonthly
       - id: fix-nbformat-version
       - id: format-setup-cfg
 
