--- a/tox.ini
+++ b/tox.ini
@@ -34,14 +34,19 @@ commands =
 
 [testenv:doc]
 description =
-  Build documentation through Sphinx
-changedir = docs
+  Build documentation and API through Sphinx
 allowlist_externals =
-  make
+  sphinx-build
 passenv =
+  EXECUTE_NB
   READTHEDOCS_VERSION
 commands =
-  make html
+  sphinx-build \
+    --color \
+    --keep-going \
+    -TW \
+    -b html \
+    docs/ docs/_build/html
 
 [testenv:doclive]
 description =
@@ -81,11 +86,15 @@ passenv =
   READTHEDOCS_VERSION
 setenv =
   EXECUTE_NB = "yes"
-changedir = docs
 allowlist_externals =
-  make
+  sphinx-build
 commands =
-  make html
+  sphinx-build \
+    --color \
+    --keep-going \
+    -TW \
+    -b html \
+    docs/ docs/_build/html
 
 [testenv:jcache]
 description =
@@ -99,11 +108,18 @@ commands =
 [testenv:linkcheck]
 description =
   Check external links in the documentation (requires internet connection)
-changedir = docs
+passenv =
+  EXECUTE_NB
+  GITHUB_TOKEN
+  READTHEDOCS_VERSION
 allowlist_externals =
-  make
+  sphinx-build
 commands =
-  make ignore-warnings=1 linkcheck # for margin directive
+  sphinx-build \
+    --color \
+    -T \
+    -b linkcheck \
+    docs/ docs/_build/linkcheck
 
 [testenv:sty]
 description =
