fix: remove redundant toggle block

--- a/tox.ini
+++ b/tox.ini
@@ -39,6 +39,7 @@ allowlist_externals =
   sphinx-build
 passenv =
   EXECUTE_NB
+  GITHUB_TOKEN
   READTHEDOCS_VERSION
 commands =
   sphinx-build \
