ci: pass GITHUB_REPO environment variable

--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,7 @@ description =
 allowlist_externals =
   pytest
 passenv =
+  GITHUB_REPO
   GITHUB_TOKEN
 commands =
   pytest {posargs}
@@ -24,6 +25,7 @@ description =
 allowlist_externals =
   pytest
 passenv =
+  GITHUB_REPO
   GITHUB_TOKEN
 commands =
   pytest {posargs:tests} \
@@ -39,6 +41,7 @@ allowlist_externals =
   sphinx-build
 passenv =
   EXECUTE_NB
+  GITHUB_REPO
   GITHUB_TOKEN
   READTHEDOCS_VERSION
 commands =
@@ -56,6 +59,7 @@ allowlist_externals =
   sphinx-autobuild
 passenv =
   EXECUTE_NB
+  GITHUB_REPO
   GITHUB_TOKEN
   READTHEDOCS_VERSION
   TERM
@@ -83,6 +87,7 @@ commands =
 description =
   Build documentation through Sphinx WITH output of Jupyter notebooks
 passenv =
+  GITHUB_REPO
   GITHUB_TOKEN
   READTHEDOCS_VERSION
 setenv =
@@ -111,6 +116,7 @@ description =
   Check external links in the documentation (requires internet connection)
 passenv =
   EXECUTE_NB
+  GITHUB_REPO
   GITHUB_TOKEN
   READTHEDOCS_VERSION
 allowlist_externals =
