ci: remove indent size for notebooks
This indent was intended for the JSON format of notebooks, but also
affects the Jupyter view in VSCode and has therefore been removed.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -80,6 +80,7 @@ repos:
       - id: editorconfig-checker
         exclude: >
           (?x)^(
+            .*\.ipynb|
             .*\.md|
             .*\.py|
             LICENSE
