chore: switch to importlib-metadata in `conf.py`

--- a/setup.cfg
+++ b/setup.cfg
@@ -58,6 +58,7 @@ package_dir =
 doc =
     dataclasses; python_version <'3.7'
     feynman
+    importlib-metadata; python_version <"3.8.0"
     ipywidgets
     jupyter
     matplotlib
