--- a/setup.cfg
+++ b/setup.cfg
@@ -69,7 +69,7 @@ doc =
     sphinx-codeautolink[ipython]
     sphinx-comments
     sphinx-copybutton
-    sphinx-panels
+    sphinx-design
     sphinx-thebe
     sphinx-togglebutton
     sphinxcontrib-bibtex >=2.2  # bibtex_reference_style
