--- a/setup.cfg
+++ b/setup.cfg
@@ -58,6 +58,7 @@ package_dir =
 doc =
     dataclasses; python_version <'3.7'
     feynman
+    importlib-metadata; python_version <"3.8.0"
     ipywidgets
     jupyter
     matplotlib
@@ -68,7 +69,7 @@ doc =
     sphinx-codeautolink[ipython]
     sphinx-comments
     sphinx-copybutton
-    sphinx-panels
+    sphinx-design
     sphinx-thebe
     sphinx-togglebutton
     sphinxcontrib-bibtex >=2.2  # bibtex_reference_style
