MAINT: limit `virtualenv` if installing `flake8`
Fixes this problem:
https://github.com/ComPWA/PWA-pages/runs/8127691260?check_suite_focus=true#step:3:73

--- a/setup.cfg
+++ b/setup.cfg
@@ -93,6 +93,7 @@ flake8 =
     flake8-type-ignore; python_version >="3.8.0"
     flake8-use-fstring
     pep8-naming
+    virtualenv <20.16; python_version <"3.8.0"  # https://github.com/ComPWA/PWA-pages/runs/8127691260?check_suite_focus=true#step:3:73
 mypy =
     mypy >=0.730  # error code support
     types-docutils
