--- a/setup.cfg
+++ b/setup.cfg
@@ -118,6 +118,7 @@ dev =
     jupyterlab
     jupyterlab-code-formatter
     jupyterlab-myst; python_version >="3.7.0"
+    jupyterlab-server <2.16; python_version <"3.8.0"  # https://github.com/ComPWA/tensorwaves/actions/runs/3366807875/jobs/5583673530#step:3:74
     pip-tools >=6.1.0  # for extras_require
     sphinx-autobuild
     tox >=1.9  # for skip_install, use_develop
